--- a/1.js_free/6.1数组及扩展.html
+++ b/1.js_free/6.1数组及扩展.html
@@ -124,7 +124,7 @@
     *   6、slice(n)  从索引n开始(包含n)，到末尾处，返回值为包含找到的内容的数组，原有数组不变
     *      slice(n,m)    从索引n开始(包含n)，到索引m处(不包含m)，返回值为包含找到的内容的数组，原有数组不变
     *      slice(0)或者slice()    对原数组克隆(复制)一份
-    *   7、concat    实现数组的克隆，原来数组不变
+    *   7、concat    arr.concat()实现数组的克隆，原来数组不变
     *      arr.concat(arr2)实现数组的拼接，返回值为拼接后的数组，原有数组都不变
     *
     * */
