--- a/1.js_free/7.4附DOM滚动条宽高实例.html
+++ b/1.js_free/7.4附DOM滚动条宽高实例.html
@@ -10,6 +10,7 @@
             background-color:#3CF;
             margin:100px auto;
             overflow:scroll;
+            float:left;
         }
     </style>
 </head>
