--- a/2.js_first/day_01/4.面试题.html
+++ b/2.js_first/day_01/4.面试题.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>珠峰培训</title>
+    <title>面试题</title>
 </head>
 <body>
 	<script type="text/javascript">
@@ -18,8 +18,8 @@
 			return n+i++;	
 		}
 		*/
-		var a = f(15);//返回15 然后让fo1里面的i变成了1
-		var d = f(20);//返ss回21 然后让fo1里面的i变成了2
+		var a = f(15);//返回15 然后让fo1里面的i变成了1 如果改为 return n+(++i) 返回16
+		var d = f(20);//返ss回21 然后让fo1里面的i变成了2 如果改为 return n+(++i) 返回22
 		//f(18);
 		
 		var b = fo()(15);//返回15，并且fo2里面的i变成了1
