--- a/2.js_first/day_01/5.综合面试题.html
+++ b/2.js_first/day_01/5.综合面试题.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>珠峰培训</title>
+    <title>综合面试题</title>
 </head>
 <body>
 	<script type="text/javascript">
