--- a/2.js_first/day_01/5.综合面试题.html
+++ b/2.js_first/day_01/5.综合面试题.html
@@ -24,9 +24,9 @@
 		var fn1 = obj.fn1;//NaN
 		console.log(number);//4
 		fn1();//9
-		obj.fn1();
-		// alert(window.number);
-		// alert(obj.number);
+		obj.fn1();//27
+		console.log(window.number);//8
+		console.log(obj.number);//8
 		
 		
 /*		
@@ -43,7 +43,7 @@ obj={
   fn1:function(){
     this.number *= 2;
     number*=3;
-    alert(number);
+    console.log(number);
   }
 }
     在给obj下的fn1赋值的时候执行闭包函数，形成私有作用域
@@ -56,24 +56,24 @@ obj={
     //闭包有return并且被obj.fn1占用了，也就是闭包不销毁
 
 fn1 = obj.fn1;
-alert(number);//4
+console.log(number);//4
 
 fn1();
    this.number *= 2; window.number*=2  
    ==>window下的number=8
    number*=3; 找没有销毁的那个闭包中的私有变量number 
    ==>私有作用域下的那个number变成了9
-   alert(number);//9
+   console.log(number);//9
 
 obj.fn1();
    this.number *= 2; obj.number*=2  
    ==>obj下的number变成了8
    number*=3;找没有销毁的那个闭包中的私有变量number 
    ==>9*3 私有作用域下的那个number变成了27
-   alert(number);//27
+   console.log(number);//27
 
-alert(window.number);//8
-alert(obj.number);//8	
+console.log(window.number);//8
+console.log(obj.number);//8	
 */	
 		
 		
