--- a/2.js_first/day_01/实战1.html
+++ b/2.js_first/day_01/实战1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>珠峰</title>
+    <title>计数器</title>
 </head>
 <body>
 	<div id="div1" style="width:800px; height:50px; line-height:50px; border:1px solid red; cursor:pointer; text-align:center; font-size:28px;">0</div>
