--- a/1.js_free/6.3实例数组去重.html
+++ b/1.js_free/6.3实例数组去重.html
@@ -42,7 +42,7 @@
 
     /***方法二：ES6迭代器(集合)    *****************************************/
     // var date1 = new Date();
-    // str1 = [...new Set(str1)];
+    // str1 = [...new Set(str1)];//通过解构赋值转化把Set集合转化为数组
     // console.log(str1.length);
     // var date2 = new Date();
     // console.log((date2 - date1));//75ms
