--- a/5.js_forth/day_03/1.2常用方法.html
+++ b/5.js_forth/day_03/1.2常用方法.html
@@ -146,6 +146,7 @@
 
     /*
     * 7、jQuery非常强大的地方在于它的链式写法(原理是执行完一个方法后返回的结果依然是一个jQuery对象,这样就可以继续调用下一个方法执行)
+    *   实现原理就是方法中return this
     * */
     });
 </script>
